--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
     "eslint-plugin-prettier": "^3.1.4",
+    "firebase": "^7.21.1",
     "quasar": "^1.0.0",
     "vue-i18n": "^8.0.0"
   },
